# examples

./: AGENTS.md  CONTRIBUTING.md  README.md  context7.json  renovate.json
.github/: CLAUDE.md  CODEOWNERS
.github/ISSUE_TEMPLATE/: queue-new-example.yml  report-broken-example.yml  suggest.yml
.github/scripts/: agent_state.py  build_pr_body.py  extract_agent_state.py  filter_secrets.py  find_unhandled_issue.py  find_unprocessed_issue.py  llm.py  next_example_number.py  plan_agent.py  run_agent.py  run_engineering_agent.py  system_prompt.md
.github/workflows/: claude-mentions.yml  context7.yml  create-example.yml  discover-examples.yml  engineer.yml  engineering.yml  fix-pr.yml  issues.yml  lead-fix.yml  lead-review.yml  notify-docs.yml  pm-dashboard.yml  pm-suggestions.yml  pm.yml  process-open-prs.yml  researcher.yml  review-pr.yml  setup-labels.yml  test-examples.yml  test-existing.yml  test-go.yml  test-java.yml  test-node.yml  test-pr-example.yml  test-python.yml  update-readme-status.yml  update-readme.yml  vp.yml
examples/010-getting-started-node/: .env.example  README.md  package.json
examples/020-twilio-media-streams-node/: package.json  pnpm-lock.yaml
examples/021-twilio-voice-agent-node/: .env.example  README.md  package.json  pnpm-lock.yaml
examples/030-livekit-agents-python/: .env.example  BLOG.md  README.md  requirements.txt
examples/040-langchain-stt-tool-python/: requirements.txt
examples/040-vercel-ai-sdk-node/: package.json
examples/050-vercel-ai-sdk-node/: README.md  package.json
examples/050-vonage-voice-websocket-node/: .env.example
examples/051-nextjs-vercel-ai-sdk-streaming/: README.md  package.json  pnpm-lock.yaml
examples/052-vercel-ai-sdk-agent-node/: .env.example  README.md  package.json  pnpm-lock.yaml
examples/060-discord-bot-node/: .env.example  README.md  package.json
examples/070-vonage-voice-websocket-node/: README.md  package.json
examples/080-pipecat-voice-pipeline-python/: .env.example  README.md  requirements.txt
examples/090-react-native-live-transcription-js/: README.md  package.json
examples/100-fastapi-audio-transcription-python/: requirements.txt
examples/110-cloudflare-worker-transcription-js/: package.json
examples/130-telegram-bot-python/: README.md  (+2 more)
examples/340-tauri-live-transcription-rust-ts/src/src-tauri/: Cargo.toml  tauri.conf.json
examples/340-tauri-live-transcription-rust-ts/src/src-tauri/src/: main.rs
examples/480-obs-captioning-plugin-c/src/: CMakeLists.txt  deepgram-caption-plugin.c
instructions/: create-example.md  discover-examples.md  engineer.md  fix-example.md  kapa-search.md  lead-fix.md  lead-review.md  pm-dashboard.md  pm-suggestions.md  pm.md  process-open-prs.md  researcher.md  review-example.md  update-readme-status.md  vp.md
tests/: e2e.py
(+318 files in other folders)
