[package]
name = "deepgram-tauri-live-transcription"
version = "0.1.0"
edition = "2021"

[dependencies]
deepgram = "0.9.1"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
