[package]
name = "deepgram-tauri-live-transcription"
version = "0.1.0"
edition = "2021"

[dependencies]
deepgram = "=0.9.2"
dotenvy = "=0.15.7"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tauri = { version = "=2.10.3", features = [] }
tokio = { version = "=1.51.0", features = ["full"] }

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }
